# lvgl_esp32_drivers

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTE_CONTROLLER_SUPPORT.md  KConfig  Kconfig  README.md  component.mk  display_config.h  idf_component.yml  lv_esp32_drivers_conf.h  lvgl_helpers.c  lvgl_helpers.h  lvgl_i2c_conf.h  lvgl_spi_conf.h
.github/workflows/: build_examples.yml  deployment.yml
examples/wemos_lolin_oled/hello_world/: CMakeLists.txt  sdkconfig.defaults
examples/wemos_lolin_oled/hello_world/main/: CMakeLists.txt  hello_world.c
i2c_manager/: Kconfig  README.md  i2c_manager.c
lv_port/: disp_spi.h  esp_lcd_backlight.c  lv_port_display_espressif.c
lvgl_i2c/: Kconfig  README.md  i2c_manager.c  i2c_manager.h
lvgl_tft/: CMakeLists.txt  EVE_commands.c  EVE_commands.h  EVE_config.h  FT81x.c  FT81x.h  GC9A01.c  GC9A01.h  Kconfig  calepd_epaper.cpp  calepd_epaper.h  component.mk  disp_driver.c  disp_driver.h  disp_spi.c  display_bsp.c  display_bsp.h  display_espressif_hal.c  display_hal.h  display_port.h  epdiy_epaper.c  epdiy_epaper.cpp  epdiy_epaper.h  epdiy_epaper_mono.cpp  epdiy_epaper_v1.cpp  epdiy_epaper_v2.cpp  esp_lcd_backlight.c  esp_lcd_backlight.h  hx8357.c  hx8357.h  il3820.c  il3820.h  ili9163c.c  ili9163c.h  ili9225.c  ili9225.h  ili9341.c  ili9341.h  ili9481.c  ili9481.h  (+28 more)
lvgl_touch/: CST816.c  CST816.h  FT81x.h  Kconfig  adcraw.c  adcraw.h  ft6x36.c  ft6x36.h  gt911.c  gt911.h  l58.cpp  l58.h  ra8875_touch.c  ra8875_touch.h  stmpe610.c  stmpe610.h  touch_driver.c  touch_driver.h  tp_spi.c  xpt2046.c  xpt2046.h
lvgl_touch/L58/: L58Touch.cpp
lvgl_touch/L58/include/: L58Touch.h
